--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ table{
           </td>
 	      </tr><!-- end tr -->
 				<tr>
-          <td valign="middle" class="hero" style="background-image: url(images/bg_1.jpg); background-size: cover; height: 400px;">
+          <td valign="middle" class="hero" style="background-image: url(https://ibb.co/yXzsFC1); background-size: cover; height: 400px;">
             <table>
             	<tr>
             		<td>
@@ -420,7 +420,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td class="icon">
-                              <img src="images/001-diet.png" alt="" style="width: 60px; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/84tBZmR" alt="" style="width: 60px; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                           <tr>
@@ -435,7 +435,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td class="icon">
-                              <img src="images/003-recipe-book.png" alt="" style="width: 60px; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/54YjYRR" alt="" style="width: 60px; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                           <tr>
@@ -458,13 +458,13 @@ table{
 		            				<table>
 		            					<tr>
 		            						<td>
-		            							<img src="images/bg_2.jpg" width="600" height="" alt="alt_text" border="0" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;" class="g-img">
+		            							<img src="https://ibb.co/hspZj4t" width="600" height="" alt="alt_text" border="0" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;" class="g-img">
 		            						</td>
 		            					</tr>
 		            				</table>
 		            				<div class="icon">
 			            				<a href="#">
-		                        <img src="images/002-play-button.png" alt="" style="width: 60px; max-width: 600px; height: auto; margin: auto; display: block;">
+		                        <img src="https://ibb.co/8D1vWHW" alt="" style="width: 60px; max-width: 600px; height: auto; margin: auto; display: block;">
 		                      </a>
 	                      </div>
 		            			</td>
@@ -491,7 +491,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td style="padding-right: 10px;">
-                              <img src="images/menu-1.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/fDtbbwB" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                           <tr>
@@ -507,7 +507,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td style="padding-left: 10px;">
-                              <img src="images/menu-2.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/qM3Rmgd" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                           <tr>
@@ -546,7 +546,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td>
-                              <img src="images/bg_3.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/ZzMqfG6" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                         </table>
@@ -563,7 +563,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td>
-                              <img src="images/bg_4.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/QNJdN21" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                         </table>
@@ -608,7 +608,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td>
-                              <img src="images/bg_6.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/qN3WHq9" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                         </table>
@@ -625,7 +625,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td>
-                              <img src="images/bg_5.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/K0Y6zKw" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                         </table>
@@ -649,7 +649,7 @@ table{
 		            </td>
 		          </tr><!-- end: tr -->
 		          <tr>
-			          <td valign="middle" class="counter" style="background-image: url(images/bg_1.jpg); background-size: cover; padding: 4em 0;">
+			          <td valign="middle" class="counter" style="background-image: url(https://ibb.co/yXzsFC1); background-size: cover; padding: 4em 0;">
 			            <table>
 			            	<tr>
 			            		<td valign="middle" width="25%">
@@ -709,7 +709,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td style="padding-right: 10px;">
-                              <img src="images/blog-1.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/48fJ3H6" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                           <tr>
@@ -726,7 +726,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td style="padding-left: 10px;">
-                              <img src="images/blog-2.jpg" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
+                              <img src="https://ibb.co/1nrxZx4" alt="" style="width: 100%; max-width: 600px; height: auto; margin: auto; display: block;">
                             </td>
                           </tr>
                           <tr>
@@ -756,7 +756,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td>
-                              <img src="images/person_1.jpg" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; margin-bottom: 20px; display: block; border-radius: 50%;">
+                              <img src="https://ibb.co/zG58Zt6" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; margin-bottom: 20px; display: block; border-radius: 50%;">
                             </td>
                           </tr>
                           <tr>
@@ -773,7 +773,7 @@ table{
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                           <tr>
                             <td>
-                              <img src="images/person_2.jpg" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; margin-bottom: 20px; display: block; border-radius: 50%;">
+                              <img src="https://ibb.co/GnvrVNg" alt="" style="width: 100px; max-width: 600px; height: auto; margin: auto; margin-bottom: 20px; display: block; border-radius: 50%;">
                             </td>
                           </tr>
                           <tr>
